# oppoCT

./: .gitignore  BEFORE_AFTER_COMPARISON.md  ORIENTATION_FIX_SUMMARY.md  QUICK_START_VERIFICATION.md  README.md  VERIFICATION_GUIDE.md  check_cuda.py  fkc2.csv  pyproject.toml  requirements.txt  results.csv  run_pipeline.py  verification_results.csv  verification_results_v2.csv  verify_pipeline.py  verify_pipeline_improved.py  verify_segmentation.py
Plain5mmSTD/: IM-0001-0001-0001.dcm  IM-0001-0002-0001.dcm  IM-0001-0003-0001.dcm  IM-0001-0004-0001.dcm  IM-0001-0005-0001.dcm  IM-0001-0006-0001.dcm  IM-0001-0007-0001.dcm  IM-0001-0008-0001.dcm  IM-0001-0009-0001.dcm  IM-0001-0010-0001.dcm  IM-0001-0011-0001.dcm  IM-0001-0012-0001.dcm  IM-0001-0013-0001.dcm  IM-0001-0014-0001.dcm  IM-0001-0015-0001.dcm  IM-0001-0016-0001.dcm  IM-0001-0017-0001.dcm  IM-0001-0018-0001.dcm  IM-0001-0019-0001.dcm  IM-0001-0020-0001.dcm  IM-0001-0021-0001.dcm  IM-0001-0022-0001.dcm  IM-0001-0023-0001.dcm  IM-0001-0024-0001.dcm  IM-0001-0025-0001.dcm  IM-0001-0026-0001.dcm  IM-0001-0027-0001.dcm  IM-0001-0028-0001.dcm  IM-0001-0029-0001.dcm  IM-0001-0030-0001.dcm  IM-0001-0031-0001.dcm  IM-0001-0032-0001.dcm  IM-0001-0033-0001.dcm  IM-0001-0034-0001.dcm  IM-0001-0035-0001.dcm  IM-0001-0036-0001.dcm  IM-0001-0037-0001.dcm  IM-0001-0038-0001.dcm  IM-0001-0039-0001.dcm  IM-0001-0040-0001.dcm
my_segmentations/ANNOY/: statistics.json
segmentations/: statistics.json
src/: __init__.py  csv_exporter.py  dicom_processor.py  patient_manager.py  pipeline.py  segmentator.py  statistics.py  visualizer.py
(+2 files in other folders)
