[project]
name = "lumbar-spine-ct-pipeline"
version = "1.0.0"
description = "Pipeline for segmenting lumbar vertebrae from CT scans and calculating HU intensity statistics"
requires-python = ">=3.9"
dependencies = [
    "totalsegmentator>=2.0.0",
    "pydicom>=2.4.0",
    "nibabel>=5.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "scipy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true


